8.additional/networkPolicy/postgres-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-dpl
  namespace: default
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres-app
        image: postgres
        ports:
        - containerPort: 5432
