8.additional/networkPolicy/spring-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-dpl
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: nginx:latest # just for testing
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        ports:
        - containerPort: 80
